[project]
name = "pythonwork"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "peewee>=3.18.0",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
